# watchflow

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
core/: decorators.py  graph.py  parallel.py  runner.py  utils.py  visualizer.py
tests/: test_graph.py  test_runner.py
