[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchflow"
version = "0.1.1"
description = "A lightweight Python task scheduler with dependency resolution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["scheduler", "dag", "pipeline", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

# Dépendances runtime — ce dont watchflow a besoin pour fonctionner
# On n'a aucune dépendance externe ! Tout est en stdlib Python.
dependencies = []

[project.optional-dependencies]
# Dépendances de développement — uniquement pour les contributeurs
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/ton-username/watchflow"
Documentation = "https://github.com/ton-username/watchflow#readme"
Issues = "https://github.com/ton-username/watchflow/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
verbose = true

[tool.hatch.build.targets.wheel]
packages = ["watchflow"]
